--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,47 +1,36 @@
-.registration-bg
-  .container
-    .row
-      .col-md-6.col-md-offset-3
-        .panel.panel-default.devise-bs
-          .panel-heading
-            h4
-              = t('.title', resource: resource_class.model_name.human , default: "Edit #{resource_name.to_s.humanize}")
-          .panel-body
-            = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-              .form-group
-                = f.label :first_name
-                = f.text_field :first_name, autofocus: true, class: 'form-control'
-              .form-group
-                = f.label :last_name
-                = f.text_field :last_name, autofocus: true, class: 'form-control'
-              .form-group
-                = f.label :nick_name
-                = f.text_field :nick_name, autofocus: true, class: 'form-control'
-              .form-group
-                = f.label :email
-                = f.email_field :email, autofocus: true, class: 'form-control'
-              .form-group
-                = f.label :password
-                i
-                  | (
-                  = t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it")
-                  | )
-                = f.password_field :password, autocomplete: "off", class: 'form-control'
-              .form-group
-                = f.label :password_confirmation
-                = f.password_field :password_confirmation, class: 'form-control'
-              .form-group
-                = f.label :current_password
-                i
-                  | (
-                  = t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes')
-                  | )
-                = f.password_field :current_password, class: 'form-control'
-              .text-center
-                = f.submit t('.update', default: 'Update'), class: 'btn btn-primary'
-        p
-          = t('.unhappy', default: 'Unhappy')
-          | ?
-          = link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete
-          | .
-        = link_to t('.back', default: 'Back'), :back
+.container
+  .row
+    .col-md-6.col-md-offset-3
+      .panel.panel-default.devise-bs
+        .panel-heading
+          h4
+            = t('.title', resource: resource_class.model_name.human , default: "Edit #{resource_name.to_s.humanize}")
+        .panel-body
+          = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+            = f.input :first_name
+            = f.input :last_name
+            = f.input :nick_name
+            = f.input :email, disabled: true, hint: 'you cannot change your email'
+            .form-group
+              = f.label :password
+              i
+                | (
+                = t('.leave_blank_if_you_don_t_want_to_change_it', default: "leave blank if you don't want to change it")
+                | )
+              = f.password_field :password, autocomplete: "off", class: 'form-control'
+            = f.input :password_confirmation, as: :password
+            .form-group
+              = f.label :current_password
+              i
+                | (
+                = t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes')
+                | )
+              = f.password_field :current_password, class: 'form-control'
+            .text-center
+              = f.submit t('.update', default: 'Update'), class: 'btn btn-block btn-primary'
+      p
+        = t('.unhappy', default: 'Unhappy')
+        | ?
+        = link_to t('.cancel_my_account', default: 'Cancel my account'), registration_path(resource_name), data: { confirm: t('.are_you_sure', default: "Are you sure?") }, method: :delete
+        | .
+      = link_to t('.back', default: 'Back'), :back
