--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,17 +1,16 @@
-.registration-bg
-  .container
-    .row
-      .col-md-4.col-md-offset-4
-        .panel.panel-default.devise-bs
-          .panel-heading
-            h4
-              = t('.sign_up', default: 'Sign up')
-          .panel-body
-            = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f|
-              = f.input :first_name
-              = f.input :last_name
-              = f.input :email
-              = f.input :password
-              = f.input :password_confirmation
-              = f.button :submit, class: 'btn btn-primary'
-        = render 'devise/shared/links'
+.container
+  .row
+    .col-md-4.col-md-offset-4
+      .panel.panel-default.devise-bs
+        .panel-heading
+          h4
+            = t('.sign_up', default: 'Sign up')
+        .panel-body
+          = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { role: 'form' }) do |f|
+            = f.input :first_name
+            = f.input :last_name
+            = f.input :email
+            = f.input :password
+            = f.input :password_confirmation
+            = f.button :submit, class: 'btn btn-block btn-primary'
+      = render 'devise/shared/links'
