--- a/app/views/devise/unlocks/new.html.slim
+++ b/app/views/devise/unlocks/new.html.slim
@@ -1,12 +1,12 @@
-= bootstrap_devise_error_messages!
-.panel.panel-default.devise-bs
-  .panel-heading
-    h4
-      = t('.resend_unlock_instructions', default: 'Resend unlock instructions')
-  .panel-body
-    = form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, html: { role: "form" } }) do |f|
-      .form-group
-        = f.label :email
-        = f.email_field :email, autofocus: true, class: 'form-control'
-      = f.submit t('.resend_unlock_instructions', default: 'Resend unlock instructions'), class: 'btn btn-primary'
-= render 'devise/shared/links'
+.container
+  .row
+    .col-md-4.col-md-offset-4
+      .panel.panel-default.devise-bs
+        .panel-heading
+          h4
+            = t('.resend_unlock_instructions', default: 'Resend unlock instructions')
+        .panel-body
+          = simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post, html: { role: "form" } }) do |f|
+            = f.input :email, as: :email
+            = f.submit t('.resend_unlock_instructions', default: 'Resend unlock instructions'), class: 'btn btn-primary'
+      = render 'devise/shared/links'
