--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,8 +21,7 @@ html[lang="en"]
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand[href="#"]
-          | SmartStudy
+        = link_to 'SmartStudy', root_path, class: 'navbar-brand'
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
             li
