--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -12,6 +12,8 @@
   .field
     = f.input :document, as: :file
   .field
+    = f.input :category_id, collection: Category.all, prompt: 'Select category book'
+  .field
     = f.input :private, as: :boolean, label: 'Set private'
   .actions
     = f.button :submit, class: 'btn btn-primary btn-block'
